# GrpcJniServer

./: README.md  keystore.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kotlinx/grpcjniserver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CarplayBtServiceImpl.h  CarplayNativeLogger.h  CarplayUnixDomainSocketServer.h  helloworld.protoc.grpc.pb.cc  helloworld.protoc.grpc.pb.h  helloworld.protoc.pb.cc  helloworld.protoc.pb.h  native-lib.cpp  rfcomm.protoc.grpc.pb.cc  rfcomm.protoc.grpc.pb.h  rfcomm.protoc.pb.cc  rfcomm.protoc.pb.h
app/src/main/cpp/grpc/include/google/protobuf/: any.pb.h  descriptor.pb.h  source_context.pb.h  type.pb.h
app/src/main/java/com/kotlinx/grpcjniserver/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kotlinx/grpcjniserver/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
